--- a/index.html
+++ b/index.html
@@ -6,10 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="style/apple-touch-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    
     <title>Currículo</title>
+    <link href="grid/simple-grid.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Erick Ferrareto</h1>
-    <img src="style/erick.00.jpg" alt="Erick Foto">
+    <div class="linha">
+        <div class="coluna-50">
+                <h1>Erick Alves Ferrareto</h1>
+                <img src="style/erick.00.jpg" alt="Erick Foto">
+
+                <pre>
+                <h2>   Desenvolvedor Front-end</h2></pre>
+                <h2>Informações de contato:</h2>
+                <ul>
+                    <li>Telefone: 11 939340325</li>
+                    <li>E-mail: e.ferraretowork@gmail.com</li>
+                    <li>linkedin: <a href="https://www.linkedin.com/in/eferrareto/" target="_blank">https://www.linkedin.com/in</a></li>
+                    <li>Github: <a href="https://github.com/eferrareto" target="_target"> https://github.com/eferrareto</a></li>
+                </ul>
+                <h2>Competências:</h2>
+                <ul>
+                    <li>Inglês - Intermediário - Nível B1</li>
+                    <li>Excel - Intermediário</li>
+                    <li>HTML5 -  Básico</li>
+                    <li>CSS - Básico</li>
+                </ul>
+        </div>
+        <div class="coluna-80">
+            <h2>Sobre:</h2>
+            <p>Diferente de muitos outros profissionais, tenho sede de aprendizado, não somente na área de tecnologia mas também em diversas áreas da nossa vida.
+                Referente a tecnologia, meu estudo é diário, para que meu aprendizado seja constante, não quero ser apenas mais um profissional na área, quero ser diferente, quero ser melhor que a média.
+                Estou nesta rede social, afim de compartilhar e receber novas experiências, da minha e de diversas áreas que possam agregar no meu futuro profissional e pessoal, estou aberto as novas conexões.
+            </p>
+            <hr>  
+            <h2>Experiências:</h2>
+            <hr>
+            <h3>Assistente Administrativo</h3>
+            <p><em>Grupo Mast - Saúde Ocupacional</em></p>
+            <p>Minha colocação é na área operacional, sempre focado em resolver as dificuldades que nossos clientes passam, a área de Saúde Ocupacional é muito ampla, onde é super normal surgirem algumas dúvidas, referente a exames e o Atestados de Saúde Ocupacional.
+            Ajudo e colaboro com a equipe com os agendamentos, também nas subidas de ASOs dentro do sistema operacional, e em todo o setor que necessitar de auxílio.</p>
+            <hr>
+            <h2>Formação Acadêmica:</h2>
+            <hr>
+            <p><strong>Faculdade - Estácio:</strong></p>
+            <p>Análise e Desenvolvimento de Sistemas.</p>
+            <hr>
+        </div>
+    </div>
 </body>
 </html>
